--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.20.0",
     "express": "^4.21.0",
-    "prisma": "^5.20.0"
+    "mongodb": "^6.9.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.3",
+    "@prisma/client": "^5.20.0",
+    "ts-node-dev": "^2.0.0",
+    "prisma": "^5.20.0",
+    "typescript": "^5.6.2"
   }
 }
