--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0"
   },
   "devDependencies": {
+    "@prisma/client": "^5.20.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.3",
-    "@prisma/client": "^5.20.0",
-    "ts-node-dev": "^2.0.0",
     "prisma": "^5.20.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   }
 }
